--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <title>Vanilla weather app</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <button class="btn btn-primary">testing</button>
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
