--- a/index.html
+++ b/index.html
@@ -20,7 +20,327 @@
   </head>
   <body>
     <div class="container">
-      <button class="btn btn-primary">testing</button>
+      <div class="welcome">
+        <h2 id="welcome">Good morning</h2>
+      </div>
+
+      <div class="location">
+        <h1 id="city">London</h1>
+      </div>
+
+      <div class="currently">
+        <h2 id="currentTime">Currently</h2>
+      </div>
+
+      <div class="weather_current row">
+        <div class="col-6" icon_main_container>
+          <svg
+            class="icon_main"
+            id="icon-main"
+            enable-background="new 0 0 512.001 512.001"
+            viewBox="0 0 512.001 512.001"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <g>
+              <path
+                d="m400.001 336h-288c-61.757 0-112-50.243-112-112s50.243-112 112-112c5.673 0 11.298.421 16.844 1.258 7.332-63.663 61.56-113.258 127.156-113.258s119.824 49.595 127.156 113.258c5.546-.837 11.171-1.258 16.844-1.258 61.757 0 112 50.243 112 112s-50.243 112-112 112zm-288-192c-44.112 0-80 35.888-80 80s35.888 80 80 80h288c44.112 0 80-35.888 80-80s-35.888-80-80-80c-9.204 0-18.216 1.543-26.784 4.587-5.044 1.792-10.65.943-14.938-2.264-4.287-3.206-6.687-8.343-6.394-13.688.077-1.423.115-2.939.115-4.635 0-52.935-43.065-96-96-96s-96 43.065-96 96c0 1.696.038 3.212.115 4.635.293 5.345-2.106 10.482-6.394 13.688-4.288 3.207-9.896 4.055-14.938 2.264-8.566-3.044-17.578-4.587-26.782-4.587z"
+              />
+              <path
+                d="m215.986 424.001c-3.05 0-6.133-.87-8.86-2.688-7.353-4.902-9.34-14.836-4.438-22.188l16-24c4.902-7.353 14.837-9.339 22.188-4.438 7.353 4.902 9.34 14.836 4.438 22.188l-16 24c-3.084 4.625-8.158 7.126-13.328 7.126z"
+              />
+              <path
+                d="m79.986 424.001c-3.05 0-6.133-.87-8.86-2.688-7.353-4.902-9.34-14.836-4.438-22.188l16-24c4.901-7.353 14.837-9.339 22.188-4.438 7.353 4.902 9.34 14.836 4.438 22.188l-16 24c-3.084 4.625-8.158 7.126-13.328 7.126z"
+              />
+              <path
+                d="m367.986 424.001c-3.05 0-6.133-.87-8.86-2.688-7.353-4.902-9.34-14.836-4.438-22.188l16-24c4.902-7.353 14.836-9.339 22.188-4.438 7.353 4.902 9.34 14.836 4.438 22.188l-16 24c-3.084 4.625-8.158 7.126-13.328 7.126z"
+              />
+              <path
+                d="m215.986 512.001c-3.05 0-6.133-.87-8.86-2.688-7.353-4.902-9.34-14.836-4.438-22.188l16-24c4.902-7.353 14.837-9.339 22.188-4.438 7.353 4.902 9.34 14.836 4.438 22.188l-16 24c-3.084 4.625-8.158 7.126-13.328 7.126z"
+              />
+              <path
+                d="m287.986 456.001c-3.05 0-6.133-.87-8.86-2.688-7.353-4.902-9.34-14.836-4.438-22.188l16-24c4.901-7.353 14.837-9.338 22.188-4.438 7.353 4.902 9.34 14.836 4.438 22.188l-16 24c-3.084 4.625-8.158 7.126-13.328 7.126z"
+              />
+              <path
+                d="m359.986 512.001c-3.05 0-6.133-.87-8.86-2.688-7.353-4.902-9.34-14.836-4.438-22.188l16-24c4.901-7.353 14.836-9.339 22.188-4.438 7.353 4.902 9.34 14.836 4.438 22.188l-16 24c-3.084 4.625-8.158 7.126-13.328 7.126z"
+              />
+              <path
+                d="m143.986 456.001c-3.05 0-6.133-.87-8.86-2.688-7.353-4.902-9.34-14.836-4.438-22.188l16-24c4.901-7.353 14.836-9.338 22.188-4.438 7.353 4.902 9.34 14.836 4.438 22.188l-16 24c-3.084 4.625-8.158 7.126-13.328 7.126z"
+              />
+              <path
+                d="m71.986 512.001c-3.05 0-6.133-.87-8.86-2.688-7.353-4.902-9.34-14.836-4.438-22.188l16-24c4.901-7.353 14.837-9.339 22.188-4.438 7.353 4.902 9.34 14.836 4.438 22.188l-16 24c-3.084 4.625-8.158 7.126-13.328 7.126z"
+              />
+            </g>
+          </svg>
+        </div>
+        <div class="col-6">
+          <ul>
+            <li class="temp" id="temp">9°C</li>
+            <li class="description" id="description">Raining</li>
+            <li class="wind" id="wind">
+              Wind: <span id="wind-direction">NE</span>
+              <span id="wind-speed"> 2km/h</span>
+            </li>
+            <li class="temp-selector">
+              <div
+                class="btn-group"
+                role="group"
+                aria-label="Basic radio toggle button group"
+              >
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="btnradio1"
+                  autocomplete="off"
+                  checked
+                />
+                <label class="btn btn-outline-primary" for="btnradio1" id="c"
+                  >Metric</label
+                >
+
+                <input
+                  type="radio"
+                  class="btn-check"
+                  name="btnradio"
+                  id="btnradio3"
+                  autocomplete="off"
+                />
+                <label class="btn btn-outline-primary" for="btnradio3" id="f"
+                  >Imperial</label
+                >
+              </div>
+            </li>
+          </ul>
+        </div>
+
+        <div class="weekly">
+          <h2>Weekly forecast</h2>
+        </div>
+        <div class="weather_forecast row">
+          <div class="col-2">
+            <ul>
+              <li class="day">Tuesday</li>
+              <li class="icon_forecast">
+                <svg
+                  id="Layer_1"
+                  enable-background="new 0 0 512 512"
+                  viewBox="0 0 512 512"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g>
+                    <path
+                      d="m256 48c-8.836 0-16-7.164-16-16v-16c0-8.836 7.164-16 16-16 8.837 0 16 7.164 16 16v16c0 8.836-7.163 16-16 16z"
+                    />
+                    <path
+                      d="m97.608 113.608c-4.095 0-8.189-1.562-11.313-4.687l-11.314-11.313c-6.249-6.248-6.249-16.379 0-22.627 6.248-6.249 16.379-6.249 22.627 0l11.313 11.313c6.249 6.248 6.249 16.379 0 22.627-3.124 3.125-7.218 4.687-11.313 4.687z"
+                    />
+                    <path
+                      d="m32 272h-16c-8.836 0-16-7.164-16-16s7.164-16 16-16h16c8.836 0 16 7.164 16 16s-7.164 16-16 16z"
+                    />
+                    <path
+                      d="m86.294 441.706c-4.095 0-8.189-1.562-11.313-4.687-6.249-6.248-6.249-16.379 0-22.627l11.313-11.313c6.248-6.249 16.379-6.249 22.627 0 6.249 6.248 6.249 16.379 0 22.627l-11.313 11.313c-3.124 3.125-7.219 4.687-11.314 4.687z"
+                    />
+                    <path
+                      d="m256 512c-8.836 0-16-7.164-16-16v-16c0-8.836 7.164-16 16-16 8.837 0 16 7.164 16 16v16c0 8.836-7.163 16-16 16z"
+                    />
+                    <path
+                      d="m425.706 441.706c-4.095 0-8.188-1.562-11.313-4.686l-11.314-11.313c-6.248-6.248-6.249-16.378-.001-22.627s16.378-6.25 22.628-.001l11.314 11.313c6.248 6.248 6.249 16.378.001 22.627-3.125 3.124-7.22 4.687-11.315 4.687z"
+                    />
+                    <path
+                      d="m496 272h-16c-8.837 0-16-7.164-16-16s7.163-16 16-16h16c8.837 0 16 7.164 16 16s-7.163 16-16 16z"
+                    />
+                    <path
+                      d="m414.392 113.608c-4.096 0-8.189-1.562-11.314-4.687-6.248-6.249-6.247-16.379.001-22.627l11.314-11.313c6.249-6.249 16.379-6.248 22.628.001 6.248 6.249 6.247 16.379-.001 22.627l-11.314 11.313c-3.125 3.124-7.22 4.686-11.314 4.686z"
+                    />
+                    <path
+                      d="m256 440c-101.458 0-184-82.542-184-184s82.542-184 184-184 184 82.542 184 184-82.542 184-184 184zm0-336c-83.813 0-152 68.187-152 152s68.187 152 152 152 152-68.187 152-152-68.187-152-152-152z"
+                    />
+                  </g>
+                </svg>
+              </li>
+              <li class="wind_forecast">19° NE: 2km/h</li>
+            </ul>
+          </div>
+
+          <div class="col-2">
+            <ul>
+              <li class="day">Wednesday</li>
+              <li class="icon_forecast">
+                <svg
+                  id="Layer_1"
+                  enable-background="new 0 0 512 512"
+                  viewBox="0 0 512 512"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g>
+                    <path
+                      d="m400 424h-288c-61.757 0-112-50.243-112-112s50.243-112 112-112c5.673 0 11.297.421 16.844 1.258 7.332-63.663 61.561-113.258 127.156-113.258s119.824 49.595 127.156 113.258c5.547-.837 11.171-1.258 16.844-1.258 61.757 0 112 50.243 112 112s-50.243 112-112 112zm-288-192c-44.112 0-80 35.888-80 80s35.888 80 80 80h288c44.112 0 80-35.888 80-80s-35.888-80-80-80c-9.204 0-18.216 1.543-26.785 4.587-5.045 1.792-10.652.942-14.939-2.265s-6.687-8.345-6.393-13.691c.078-1.419.116-2.934.116-4.631 0-52.935-43.065-96-96-96s-96 43.065-96 96c0 1.697.038 3.212.116 4.631.294 5.346-2.105 10.484-6.393 13.691-4.287 3.207-9.894 4.057-14.939 2.265-8.567-3.044-17.579-4.587-26.783-4.587z"
+                    />
+                  </g>
+                </svg>
+              </li>
+              <li class="wind_forecast">19° NE: 2km/h</li>
+            </ul>
+          </div>
+
+          <div class="col-2">
+            <ul>
+              <li class="day">Thursday</li>
+              <li class="icon_forecast">
+                <svg
+                  id="Layer_1"
+                  enable-background="new 0 0 512 512"
+                  viewBox="0 0 512 512"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g>
+                    <path
+                      d="m400 424h-288c-61.757 0-112-50.243-112-112s50.243-112 112-112c5.673 0 11.297.421 16.844 1.258 7.332-63.663 61.561-113.258 127.156-113.258s119.824 49.595 127.156 113.258c5.547-.837 11.171-1.258 16.844-1.258 61.757 0 112 50.243 112 112s-50.243 112-112 112zm-288-192c-44.112 0-80 35.888-80 80s35.888 80 80 80h288c44.112 0 80-35.888 80-80s-35.888-80-80-80c-9.204 0-18.216 1.543-26.785 4.587-5.045 1.792-10.652.942-14.939-2.265s-6.687-8.345-6.393-13.691c.078-1.419.116-2.934.116-4.631 0-52.935-43.065-96-96-96s-96 43.065-96 96c0 1.697.038 3.212.116 4.631.294 5.346-2.105 10.484-6.393 13.691-4.287 3.207-9.894 4.057-14.939 2.265-8.567-3.044-17.579-4.587-26.783-4.587z"
+                    />
+                  </g>
+                </svg>
+              </li>
+              <li class="wind_forecast">19° NE: 2km/h</li>
+            </ul>
+          </div>
+
+          <div class="col-2">
+            <ul>
+              <li class="day">Friday</li>
+              <li class="icon_forecast">
+                <svg
+                  id="Layer_1"
+                  enable-background="new 0 0 512 512"
+                  viewBox="0 0 512 512"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g>
+                    <path
+                      d="m512 216c0-101.458-82.542-184-184-184-48.82 0-94.808 18.921-129.489 53.277-33.654 33.338-52.875 77.45-54.407 124.617-7.985 14.33-13.3 30.343-15.26 47.364-5.546-.837-11.171-1.258-16.844-1.258-61.757 0-112 50.243-112 112s50.243 112 112 112h288c61.757 0 112-50.243 112-112 0-24.572-7.96-47.316-21.429-65.803 14.04-26.439 21.429-56.003 21.429-86.197zm-184-152c83.813 0 152 68.187 152 152 0 21.543-4.555 42.689-13.256 62.115-18.653-13.886-41.755-22.115-66.744-22.115-5.673 0-11.298.421-16.844 1.258-7.332-63.663-61.56-113.258-127.156-113.258-26.439 0-51.028 8.061-71.447 21.848 20.851-59.181 77.47-101.848 143.447-101.848zm72 384h-288c-44.112 0-80-35.888-80-80s35.888-80 80-80c9.204 0 18.216 1.543 26.784 4.587 5.042 1.792 10.649.943 14.938-2.264 4.287-3.206 6.687-8.343 6.394-13.688-.078-1.423-.116-2.939-.116-4.635 0-52.935 43.065-96 96-96s96 43.065 96 96c0 1.696-.038 3.212-.115 4.635-.293 5.345 2.106 10.482 6.394 13.688s9.894 4.056 14.938 2.264c8.567-3.044 17.579-4.587 26.783-4.587 44.112 0 80 35.888 80 80s-35.888 80-80 80z"
+                    />
+                  </g>
+                </svg>
+              </li>
+              <li class="wind_forecast">19° NE: 2km/h</li>
+            </ul>
+          </div>
+
+          <div class="col-2">
+            <ul>
+              <li class="day">Saturday</li>
+              <li class="icon_forecast">
+                <svg
+                  id="Layer_1"
+                  enable-background="new 0 0 512 512"
+                  viewBox="0 0 512 512"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <g>
+                    <path
+                      d="m256 48c-8.836 0-16-7.164-16-16v-16c0-8.836 7.164-16 16-16 8.837 0 16 7.164 16 16v16c0 8.836-7.163 16-16 16z"
+                    />
+                    <path
+                      d="m97.608 113.608c-4.095 0-8.189-1.562-11.313-4.687l-11.314-11.313c-6.249-6.248-6.249-16.379 0-22.627 6.248-6.249 16.379-6.249 22.627 0l11.313 11.313c6.249 6.248 6.249 16.379 0 22.627-3.124 3.125-7.218 4.687-11.313 4.687z"
+                    />
+                    <path
+                      d="m32 272h-16c-8.836 0-16-7.164-16-16s7.164-16 16-16h16c8.836 0 16 7.164 16 16s-7.164 16-16 16z"
+                    />
+                    <path
+                      d="m86.294 441.706c-4.095 0-8.189-1.562-11.313-4.687-6.249-6.248-6.249-16.379 0-22.627l11.313-11.313c6.248-6.249 16.379-6.249 22.627 0 6.249 6.248 6.249 16.379 0 22.627l-11.313 11.313c-3.124 3.125-7.219 4.687-11.314 4.687z"
+                    />
+                    <path
+                      d="m256 512c-8.836 0-16-7.164-16-16v-16c0-8.836 7.164-16 16-16 8.837 0 16 7.164 16 16v16c0 8.836-7.163 16-16 16z"
+                    />
+                    <path
+                      d="m425.706 441.706c-4.095 0-8.188-1.562-11.313-4.686l-11.314-11.313c-6.248-6.248-6.249-16.378-.001-22.627s16.378-6.25 22.628-.001l11.314 11.313c6.248 6.248 6.249 16.378.001 22.627-3.125 3.124-7.22 4.687-11.315 4.687z"
+                    />
+                    <path
+                      d="m496 272h-16c-8.837 0-16-7.164-16-16s7.163-16 16-16h16c8.837 0 16 7.164 16 16s-7.163 16-16 16z"
+                    />
+                    <path
+                      d="m414.392 113.608c-4.096 0-8.189-1.562-11.314-4.687-6.248-6.249-6.247-16.379.001-22.627l11.314-11.313c6.249-6.249 16.379-6.248 22.628.001 6.248 6.249 6.247 16.379-.001 22.627l-11.314 11.313c-3.125 3.124-7.22 4.686-11.314 4.686z"
+                    />
+                    <path
+                      d="m256 440c-101.458 0-184-82.542-184-184s82.542-184 184-184 184 82.542 184 184-82.542 184-184 184zm0-336c-83.813 0-152 68.187-152 152s68.187 152 152 152 152-68.187 152-152-68.187-152-152-152z"
+                    />
+                  </g>
+                </svg>
+              </li>
+              <li class="wind_forecast">19° NE: 2km/h</li>
+            </ul>
+          </div>
+        </div>
+        <div class="search_bar">
+          <form action="" id="search-city">
+            <div class="input-group mb-3">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Find your city"
+                aria-label="Find your city"
+                aria-describedby="button-addon2"
+                id="city-search-box"
+              />
+              <button
+                class="btn btn-outline-secondary"
+                type="button"
+                id="button-addon2"
+                value="submit"
+              >
+                Search
+              </button>
+
+              <button
+                class="btn btn-outline-secondary"
+                type="button"
+                id="current-location"
+                value="submit"
+              >
+                <svg
+                  class="current-location"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  version="1.1"
+                  id="Capa_1"
+                  x="0px"
+                  y="0px"
+                  xml:space="preserve"
+                  height="40px"
+                  width="40px"
+                  viewBox="0 0 512 512"
+                >
+                  <g>
+                    <path
+                      d="M468.329,358.972c-7.263-3.989-16.382-1.336-20.369,5.924c-3.989,7.261-1.337,16.381,5.924,20.369   C471.752,395.081,482,405.963,482,415.121c0,11.201-15.87,28.561-60.413,43.694C377.582,473.767,318.775,482,256,482   s-121.582-8.233-165.587-23.185C45.87,443.683,30,426.322,30,415.121c0-9.158,10.248-20.04,28.116-29.857   c7.261-3.988,9.913-13.108,5.924-20.369c-3.989-7.26-13.106-9.913-20.369-5.924C23.749,369.916,0,388.542,0,415.121   c0,20.374,14.012,49.422,80.762,72.1C127.794,503.2,190.028,512,256,512s128.206-8.8,175.238-24.779   c66.75-22.678,80.762-51.726,80.762-72.1C512,388.542,488.251,369.916,468.329,358.972z"
+                    />
+                    <path
+                      d="M142.752,437.13c30.45,8.602,70.669,13.34,113.248,13.34s82.798-4.737,113.248-13.34   c37.253-10.523,56.142-25.757,56.142-45.275c0-19.519-18.889-34.751-56.142-45.274c-8.27-2.336-17.264-4.385-26.826-6.133   c-5.193,8.972-10.634,18.207-16.323,27.708c10.584,1.588,20.521,3.535,29.545,5.834c27.416,6.983,37.432,14.844,39.491,17.866   c-2.06,3.023-12.074,10.884-39.49,17.866c-25.949,6.609-59.335,10.379-94.498,10.716c-1.703,0.126-3.419,0.197-5.147,0.197   c-1.729,0-3.444-0.071-5.148-0.197c-35.163-0.337-68.549-4.106-94.498-10.716c-27.416-6.982-37.431-14.844-39.49-17.866   c2.059-3.022,12.075-10.883,39.491-17.866c9.024-2.298,18.961-4.246,29.546-5.834c-5.689-9.5-11.13-18.737-16.323-27.708   c-9.562,1.749-18.557,3.797-26.826,6.133c-37.253,10.523-56.142,25.756-56.142,45.274   C86.61,411.373,105.499,426.606,142.752,437.13z"
+                    />
+                    <path
+                      d="M256,390.634c13.353,0,25.482-6.804,32.448-18.201c48.81-79.857,106.992-185.103,106.992-232.994   C395.44,62.552,332.888,0,256,0S116.56,62.552,116.56,139.439c0,47.891,58.183,153.137,106.992,232.994   C230.518,383.83,242.648,390.634,256,390.634z M199.953,129.865c0-30.903,25.143-56.045,56.047-56.045s56.047,25.142,56.047,56.045   c0,30.904-25.143,56.046-56.047,56.046S199.953,160.77,199.953,129.865z"
+                    />
+                  </g>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
+        <div class="footer row">
+          <div class="col-3 external_link">
+            <a href="#" target="_blank"
+              ><img
+                src="imgs/png/Group 7@2x.png"
+                alt="weather.com link"
+                height="95px"
+                width="95px"
+            /></a>
+          </div>
+          <div class="col-6">
+            <h2>powered by Openweathermap.org</h2>
+          </div>
+          <div class="col-3"></div>
+        </div>
+      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
