added open source link

--- a/index.html
+++ b/index.html
@@ -342,6 +342,16 @@
         </div>
       </div>
     </div>
+    <div class="open-source">
+      <small
+        ><a
+          href="https://github.com/drewballs/vanilla-weather-app"
+          target="blank"
+          >Open-source code</a
+        >
+        by Drew Moore</small
+      >
+    </div>
     <script src="src/app.js"></script>
   </body>
 </html>
