--- a/index.html
+++ b/index.html
@@ -22,16 +22,12 @@
   </head>
   <body>
     <div class="container">
-      <div class="welcome">
-        <h2 id="welcome">Good morning</h2>
-      </div>
-
       <div class="location">
         <h1 id="city">London</h1>
       </div>
 
       <div class="currently">
-        <h2 id="currentTime">Currently</h2>
+        <h2>Last updated: <span id="current-time"></span></h2>
       </div>
 
       <div class="weather_current row">
