--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="container">
       <div class="location">
-        <h1 id="city">London</h1>
+        <h1 id="city">Location</h1>
       </div>
 
       <div class="currently">
@@ -34,12 +34,11 @@
         <div class="col-6" icon_main_container>
           <svg
             class="icon_main"
-            id="icon-main"
             enable-background="new 0 0 512.001 512.001"
             viewBox="0 0 512.001 512.001"
             xmlns="http://www.w3.org/2000/svg"
           >
-            <g>
+            <g id="icon-main">
               <path
                 d="m400.001 336h-288c-61.757 0-112-50.243-112-112s50.243-112 112-112c5.673 0 11.298.421 16.844 1.258 7.332-63.663 61.56-113.258 127.156-113.258s119.824 49.595 127.156 113.258c5.546-.837 11.171-1.258 16.844-1.258 61.757 0 112 50.243 112 112s-50.243 112-112 112zm-288-192c-44.112 0-80 35.888-80 80s35.888 80 80 80h288c44.112 0 80-35.888 80-80s-35.888-80-80-80c-9.204 0-18.216 1.543-26.784 4.587-5.044 1.792-10.65.943-14.938-2.264-4.287-3.206-6.687-8.343-6.394-13.688.077-1.423.115-2.939.115-4.635 0-52.935-43.065-96-96-96s-96 43.065-96 96c0 1.696.038 3.212.115 4.635.293 5.345-2.106 10.482-6.394 13.688-4.288 3.207-9.896 4.055-14.938 2.264-8.566-3.044-17.578-4.587-26.782-4.587z"
               />
