search bar works

--- a/index.html
+++ b/index.html
@@ -271,18 +271,19 @@
           <form action="" id="search-city">
             <div class="input-group mb-3">
               <input
-                type="text"
+                type="search"
                 class="form-control"
                 placeholder="Find your city"
                 aria-label="Find your city"
                 aria-describedby="button-addon2"
                 id="city-search-box"
+                autocomplete="off"
               />
               <button
                 class="btn btn-outline-secondary"
-                type="button"
+                type="submit"
                 id="button-addon2"
-                value="submit"
+                value="search"
               >
                 Search
               </button>
