added imperial / metric button function

--- a/index.html
+++ b/index.html
@@ -72,12 +72,13 @@
         <div class="col-6">
           <ul>
             <li class="temp">
-              <span id="temp"></span><span id="temp-unit">°C</span>
+              <span id="temp"></span>
             </li>
             <li class="description" id="description"></li>
             <li class="wind" id="wind">
               Wind: <span id="wind-direction">NE</span>
-              <span id="wind-speed"></span>
+              <span id="wind-speed"></span
+              ><span id="wind-speed-unit"> kph</span>
             </li>
             <li class="temp-selector">
               <div
