added template forecast data and widened div to 80%

--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
                   </g>
                 </svg>
               </li>
-              <li class="wind_forecast">19° NE: 2km/h</li>
+              <li class="temp-forecast">Min: 19° Max: 24°</li>
+              <li class="wind_forecast">Wind NE: 2km/h</li>
             </ul>
           </div>
 
