fixed icon main class problem and added padding to icon

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="weather_current row">
-        <div class="col-6" icon_main_container>
+        <div class="col-6 icon_main_container">
           <svg
             class="icon_main"
             enable-background="new 0 0 512.001 512.001"
