--- a/index.html
+++ b/index.html
@@ -117,6 +117,8 @@
           <h2>Weekly forecast</h2>
         </div>
         <div class="weather_forecast row">
+
+
           <div class="col-2">
             <ul>
               <li class="day">Tuesday</li>
@@ -159,117 +161,11 @@
                 </svg>
               </li>
               <li class="temp-forecast">Min: 19° Max: 24°</li>
-              <li class="wind_forecast">Wind NE: 2km/h</li>
+              <li class="wind_forecast">Wind NE: 2kph</li>
             </ul>
           </div>
 
-          <div class="col-2">
-            <ul>
-              <li class="day">Wednesday</li>
-              <li class="icon_forecast">
-                <svg
-                  id="Layer_1"
-                  enable-background="new 0 0 512 512"
-                  viewBox="0 0 512 512"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g>
-                    <path
-                      d="m400 424h-288c-61.757 0-112-50.243-112-112s50.243-112 112-112c5.673 0 11.297.421 16.844 1.258 7.332-63.663 61.561-113.258 127.156-113.258s119.824 49.595 127.156 113.258c5.547-.837 11.171-1.258 16.844-1.258 61.757 0 112 50.243 112 112s-50.243 112-112 112zm-288-192c-44.112 0-80 35.888-80 80s35.888 80 80 80h288c44.112 0 80-35.888 80-80s-35.888-80-80-80c-9.204 0-18.216 1.543-26.785 4.587-5.045 1.792-10.652.942-14.939-2.265s-6.687-8.345-6.393-13.691c.078-1.419.116-2.934.116-4.631 0-52.935-43.065-96-96-96s-96 43.065-96 96c0 1.697.038 3.212.116 4.631.294 5.346-2.105 10.484-6.393 13.691-4.287 3.207-9.894 4.057-14.939 2.265-8.567-3.044-17.579-4.587-26.783-4.587z"
-                    />
-                  </g>
-                </svg>
-              </li>
-              <li class="wind_forecast">19° NE: 2km/h</li>
-            </ul>
-          </div>
-
-          <div class="col-2">
-            <ul>
-              <li class="day">Thursday</li>
-              <li class="icon_forecast">
-                <svg
-                  id="Layer_1"
-                  enable-background="new 0 0 512 512"
-                  viewBox="0 0 512 512"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g>
-                    <path
-                      d="m400 424h-288c-61.757 0-112-50.243-112-112s50.243-112 112-112c5.673 0 11.297.421 16.844 1.258 7.332-63.663 61.561-113.258 127.156-113.258s119.824 49.595 127.156 113.258c5.547-.837 11.171-1.258 16.844-1.258 61.757 0 112 50.243 112 112s-50.243 112-112 112zm-288-192c-44.112 0-80 35.888-80 80s35.888 80 80 80h288c44.112 0 80-35.888 80-80s-35.888-80-80-80c-9.204 0-18.216 1.543-26.785 4.587-5.045 1.792-10.652.942-14.939-2.265s-6.687-8.345-6.393-13.691c.078-1.419.116-2.934.116-4.631 0-52.935-43.065-96-96-96s-96 43.065-96 96c0 1.697.038 3.212.116 4.631.294 5.346-2.105 10.484-6.393 13.691-4.287 3.207-9.894 4.057-14.939 2.265-8.567-3.044-17.579-4.587-26.783-4.587z"
-                    />
-                  </g>
-                </svg>
-              </li>
-              <li class="wind_forecast">19° NE: 2km/h</li>
-            </ul>
-          </div>
-
-          <div class="col-2">
-            <ul>
-              <li class="day">Friday</li>
-              <li class="icon_forecast">
-                <svg
-                  id="Layer_1"
-                  enable-background="new 0 0 512 512"
-                  viewBox="0 0 512 512"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g>
-                    <path
-                      d="m512 216c0-101.458-82.542-184-184-184-48.82 0-94.808 18.921-129.489 53.277-33.654 33.338-52.875 77.45-54.407 124.617-7.985 14.33-13.3 30.343-15.26 47.364-5.546-.837-11.171-1.258-16.844-1.258-61.757 0-112 50.243-112 112s50.243 112 112 112h288c61.757 0 112-50.243 112-112 0-24.572-7.96-47.316-21.429-65.803 14.04-26.439 21.429-56.003 21.429-86.197zm-184-152c83.813 0 152 68.187 152 152 0 21.543-4.555 42.689-13.256 62.115-18.653-13.886-41.755-22.115-66.744-22.115-5.673 0-11.298.421-16.844 1.258-7.332-63.663-61.56-113.258-127.156-113.258-26.439 0-51.028 8.061-71.447 21.848 20.851-59.181 77.47-101.848 143.447-101.848zm72 384h-288c-44.112 0-80-35.888-80-80s35.888-80 80-80c9.204 0 18.216 1.543 26.784 4.587 5.042 1.792 10.649.943 14.938-2.264 4.287-3.206 6.687-8.343 6.394-13.688-.078-1.423-.116-2.939-.116-4.635 0-52.935 43.065-96 96-96s96 43.065 96 96c0 1.696-.038 3.212-.115 4.635-.293 5.345 2.106 10.482 6.394 13.688s9.894 4.056 14.938 2.264c8.567-3.044 17.579-4.587 26.783-4.587 44.112 0 80 35.888 80 80s-35.888 80-80 80z"
-                    />
-                  </g>
-                </svg>
-              </li>
-              <li class="wind_forecast">19° NE: 2km/h</li>
-            </ul>
-          </div>
-
-          <div class="col-2">
-            <ul>
-              <li class="day">Saturday</li>
-              <li class="icon_forecast">
-                <svg
-                  id="Layer_1"
-                  enable-background="new 0 0 512 512"
-                  viewBox="0 0 512 512"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <g>
-                    <path
-                      d="m256 48c-8.836 0-16-7.164-16-16v-16c0-8.836 7.164-16 16-16 8.837 0 16 7.164 16 16v16c0 8.836-7.163 16-16 16z"
-                    />
-                    <path
-                      d="m97.608 113.608c-4.095 0-8.189-1.562-11.313-4.687l-11.314-11.313c-6.249-6.248-6.249-16.379 0-22.627 6.248-6.249 16.379-6.249 22.627 0l11.313 11.313c6.249 6.248 6.249 16.379 0 22.627-3.124 3.125-7.218 4.687-11.313 4.687z"
-                    />
-                    <path
-                      d="m32 272h-16c-8.836 0-16-7.164-16-16s7.164-16 16-16h16c8.836 0 16 7.164 16 16s-7.164 16-16 16z"
-                    />
-                    <path
-                      d="m86.294 441.706c-4.095 0-8.189-1.562-11.313-4.687-6.249-6.248-6.249-16.379 0-22.627l11.313-11.313c6.248-6.249 16.379-6.249 22.627 0 6.249 6.248 6.249 16.379 0 22.627l-11.313 11.313c-3.124 3.125-7.219 4.687-11.314 4.687z"
-                    />
-                    <path
-                      d="m256 512c-8.836 0-16-7.164-16-16v-16c0-8.836 7.164-16 16-16 8.837 0 16 7.164 16 16v16c0 8.836-7.163 16-16 16z"
-                    />
-                    <path
-                      d="m425.706 441.706c-4.095 0-8.188-1.562-11.313-4.686l-11.314-11.313c-6.248-6.248-6.249-16.378-.001-22.627s16.378-6.25 22.628-.001l11.314 11.313c6.248 6.248 6.249 16.378.001 22.627-3.125 3.124-7.22 4.687-11.315 4.687z"
-                    />
-                    <path
-                      d="m496 272h-16c-8.837 0-16-7.164-16-16s7.163-16 16-16h16c8.837 0 16 7.164 16 16s-7.163 16-16 16z"
-                    />
-                    <path
-                      d="m414.392 113.608c-4.096 0-8.189-1.562-11.314-4.687-6.248-6.249-6.247-16.379.001-22.627l11.314-11.313c6.249-6.249 16.379-6.248 22.628.001 6.248 6.249 6.247 16.379-.001 22.627l-11.314 11.313c-3.125 3.124-7.22 4.686-11.314 4.686z"
-                    />
-                    <path
-                      d="m256 440c-101.458 0-184-82.542-184-184s82.542-184 184-184 184 82.542 184 184-82.542 184-184 184zm0-336c-83.813 0-152 68.187-152 152s68.187 152 152 152 152-68.187 152-152-68.187-152-152-152z"
-                    />
-                  </g>
-                </svg>
-              </li>
-              <li class="wind_forecast">19° NE: 2km/h</li>
-            </ul>
-          </div>
+          
         </div>
         <div class="search_bar">
           <form action="" id="search-city">
